--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ src/interface/android/*.apk
 src/interface/android/*.apk.idsig
 src/interface/android/*.keystore
 src/interface/android/local.properties
+/src/khoj/.credentials/
