--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ src/interface/android/*.apk.idsig
 src/interface/android/*.keystore
 src/interface/android/local.properties
 /src/khoj/.credentials/
+/cookies.txt
